MFB: Fixed Bug #44197 (socket array keys lost on socket_select)